--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>HubJogos</title>
     <link rel="stylesheet" href="style.css">
     <script src="script.js" defer></script>
+    <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
 </head>
 <body>
     <div class="container-botoes">
