--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 </head>
 <body>
     <div class="container-botoes">
-        <button onclick="iniciarJogoSoma()">Jogo da Soma</button>
-        <button onclick="iniciarJogoMedia()">Jogo da Média</button>
-        <button onclick="iniciarJogoNumeroSecreto()">Jogo do Número Secreto</button>
+        <button onclick="iniciarJogoSoma()">Jogo Soma</button>
+        <button onclick="iniciarJogoMedia()">Jogo Média</button>
+        <button onclick="iniciarJogoNumeroSecreto()">Jogo Número Secreto</button>
     </div>
 </body>
 </html>
