--- a/index.html
+++ b/index.html
@@ -14,5 +14,9 @@
         <button onclick="iniciarJogoMedia()">Jogo Média</button>
         <button onclick="iniciarJogoNumeroSecreto()">Jogo Número Secreto</button>
     </div>
+
+    <audio id="som-click" src="blip3.mp3" preload="auto"></audio>
+    <audio id="som-final" src="blipfinal.mp3" preload="auto"></audio>
+
 </body>
 </html>
