--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>6ix</title>
+    <title>Fiv5</title>
     <link rel="stylesheet" href="style.css">
     <script src="script.js" defer></script>
     <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
@@ -14,9 +14,5 @@
         <button onclick="iniciarJogoMedia()">Jogo Média</button>
         <button onclick="iniciarJogoNumeroSecreto()">Jogo Número Secreto</button>
     </div>
-
-    <audio id="som-click" src="blip3.mp3" preload="auto"></audio>
-    <audio id="som-final" src="blipfinal.mp3" preload="auto"></audio>
-
 </body>
 </html>
